objects/LLC_BI__Loan__c.object
<CustomObject>
    <description>The Loan Object stores information of the details of a Loan.</description>
    <fields>
        <fullName>Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to associated relationship.</description>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans (Account Lookup)</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accrue_Odd_Days_Interest_365_Day_Basis__c</fullName>
        <label>Accrue Odd Days Interest - 365 Day Basis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>N - No, loan will not accrue odd days interest</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <default>true</default>
                    <label>B - Both - both more and less scenerios</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>L - Less - accrue if odd days LT1 pymt freq</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>M - More - accrue if odd days GT1 pymt freq</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amortized_Through_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Amortized Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arkansas_Loan__c</fullName>
        <description>Field requested by Jeff Beck</description>
        <label>Arkansas Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_of_Rents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture if Assignment of Rents and Leases is needed as part of the closing package.</description>
        <label>Assignment of Rents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boarding_Review_Status__c</fullName>
        <description>It will be used in boarding review section.</description>
        <label>Boarding Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_Individual__c</fullName>
        <formula>IF(
ISPICKVAL(Entity_Involvement__r.LLC_BI__Account__r.Type, &quot;Individual&quot;)&amp;&amp;
ISPICKVAL(Entity_Involvement__r.LLC_BI__Borrower_Type__c,&quot;Borrower&quot;),&quot;true&quot;,&quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Borrower Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Loan_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if Business Loan Agreement is needed</description>
        <label>Business Loan Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Aircraft_NonTitled_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. If enabled, it indicates that a loan has  Aircraft/NonTitled Collateral type. If disabled, a loan does not have Aircraft/NonTitled Collateral. By default, this value is disabled.</description>
        <label>Aircraft/NonTitled Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Application_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Application Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Appraiser_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It stores the appraisal review user.</description>
        <label>Appraiser Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans5ieQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Assigned_Permission_Set__c</fullName>
        <formula>IF(
NOT(OR(ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Decisioning&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;),
ISPICKVAL(LLC_BI__Stage__c,&quot;Complete&quot;))),
IF($Permission.CP_Appraisal_Review_Permission_Set,&apos;CP_Appraisal_Review_Permission_Set&apos;,
IF(AND($Permission.CP_Loan_Servicing_permission_set,NOT(OR(
ISPICKVAL(LLC_BI__Stage__c, &quot;Qualification / Proposal&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Application Processing&quot;),
ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Underwriting&quot;)))),&apos;CP_Loan_Servicing_permission_set&apos;,&apos;not met&apos;)),
IF($Permission.CP_Participations,&apos;CP_Participations&apos;,&apos;not met&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Permission Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Available_Amount__c</fullName>
        <description>Used to SUM the available amount of participation records tied to the loan</description>
        <label>Available Amount</label>
        <summarizedField>LLC_BI__Participation__c.CF_Available_Amount__c</summarizedField>
        <summaryForeignKey>LLC_BI__Participation__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <description>This field is used to capture Branch Name from associated relationship. This is being populated from Loan &amp; Account AFTER flow &amp; is being used in couple of reports.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Budget_and_Draws_Routes_Editability__c</fullName>
        <description>This field is used on Budget Administration, Draws &amp; Disbursements route groups conditional display criteria to make information View/Editable for users based on stage</description>
        <formula>IF( 

OR( $Profile.Name =&quot;TBOM Read Only&quot;, 
ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Decisioning&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Complete&quot;)),
&quot;AtPostApprovalStage&quot;,

IF( 
AND(
OR( $Profile.Name =&quot;Relationship Manager &amp; Credit&quot;, 
$Profile.Name =&quot;Credit &amp; Processor&quot;, 
$Profile.Name = &quot;PWC/nCino&quot;,
$Profile.Name =&quot;System Administrator&quot;), 
OR( ISPICKVAL(LLC_BI__Stage__c, &quot;Qualification / Proposal&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Application Processing&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Underwriting&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Pre-Closing Due Diligence&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Doc Prep &amp; Review&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Closing&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Booking / Funding&quot;), 
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;))
), 
&quot;AtPreApprovalStage&quot;, &quot;NotMetAnyCriteria&quot;)

)</formula>
        <label>Budget and Draws Routes Editability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Change_Memo_Loan_UI_Status__c</fullName>
        <description>This field is used to handle Loan UI lock/unlock based on the value of change memo</description>
        <label>Change Memo/Loan UI Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Changes Complete/UI Locked</fullName>
                </value>
                <value>
                    <fullName>Pending Changes / UI Unlocked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Change_Memo_Unlock_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Memo Unlock UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Client_Acceptance_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Acceptance Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Client_Acceptance_Received__c</fullName>
        <label>Client Acceptance Received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Close_on_Zero_Balance__c</fullName>
        <description>Picklist the currently default to &quot;yes&quot; to indicate that loan will close once the balance reaches zero.   Loan Operations will change this field to &quot;no&quot; for lines of credit.</description>
        <label>Close on Zero Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Closing_Date_Scheduled__c</fullName>
        <description>Field to be added in the due diligence field set</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closing Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Closing_Description__c</fullName>
        <description>Closing Description is used under Post Approval route &gt; Due Diligence sub route</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Closing_Document_Due_Date__c</fullName>
        <description>This field is is used under Post Approval route &gt; Due Diligence sub route</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closing Document Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Closing_Entity__c</fullName>
        <label>Closing Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Title Company</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Collateral_Code__c</fullName>
        <description>Collateral Codes used for mapping to Jack Henry</description>
        <label>Collateral Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>1 Conversion Error Collateral Code</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 Blanket Business</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>111 Accounts Receivable</label>
                </value>
                <value>
                    <fullName>122</fullName>
                    <label>122 Notes Receivable</label>
                </value>
                <value>
                    <fullName>124</fullName>
                    <label>124 Life Insurance</label>
                </value>
                <value>
                    <fullName>125</fullName>
                    <label>125 Stocks Publicly Traded</label>
                </value>
                <value>
                    <fullName>126</fullName>
                    <label>126 Stocks Unlisted</label>
                </value>
                <value>
                    <fullName>127</fullName>
                    <label>127 Bonds</label>
                </value>
                <value>
                    <fullName>128</fullName>
                    <label>128 Broker Accounts</label>
                </value>
                <value>
                    <fullName>129</fullName>
                    <label>129 Annuities</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>130 Mutual Funds</label>
                </value>
                <value>
                    <fullName>131</fullName>
                    <label>131 Treasuries</label>
                </value>
                <value>
                    <fullName>132</fullName>
                    <label>132 Other Investments</label>
                </value>
                <value>
                    <fullName>133</fullName>
                    <label>133 Inventory</label>
                </value>
                <value>
                    <fullName>134</fullName>
                    <label>134 Reliable Community Bancshares, Inc. Stock</label>
                </value>
                <value>
                    <fullName>135</fullName>
                    <label>135 Other Bank Stock</label>
                </value>
                <value>
                    <fullName>136</fullName>
                    <label>136 Certificate of Deposit</label>
                </value>
                <value>
                    <fullName>137</fullName>
                    <label>137 Savings Account</label>
                </value>
                <value>
                    <fullName>138</fullName>
                    <label>138 Checking/Money Market Account</label>
                </value>
                <value>
                    <fullName>139</fullName>
                    <label>139 Other Financial Instrument</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140 Inventory-Floor Plan</label>
                </value>
                <value>
                    <fullName>141</fullName>
                    <label>141 Ownership Interest in Privately Held Co</label>
                </value>
                <value>
                    <fullName>166</fullName>
                    <label>166 1-4 Family Rental Real Estate</label>
                </value>
                <value>
                    <fullName>175</fullName>
                    <label>175 OTR Trucks</label>
                </value>
                <value>
                    <fullName>176</fullName>
                    <label>176 Business Machinery and Equipment</label>
                </value>
                <value>
                    <fullName>178</fullName>
                    <label>178 Office Equipment</label>
                </value>
                <value>
                    <fullName>179</fullName>
                    <label>179 Business-New or Used Vehicles</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>180 Equipment Leased to Equipment Share</label>
                </value>
                <value>
                    <fullName>181</fullName>
                    <label>181 PMSI (except Equipment Share)</label>
                </value>
                <value>
                    <fullName>182</fullName>
                    <label>182 Other-if not else where classified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Compliance_Route_Editability__c</fullName>
        <formula>IF(
  AND( 
      $Profile.Name =&quot;TBOM Read Only&quot; ,
	   OR(
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Qualification / Proposal&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Application Processing&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Underwriting&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Pre-Closing Due Diligence&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Doc Prep &amp; Review&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Closing&quot;),
		  ISPICKVAL(LLC_BI__Stage__c, &quot;Booking / Funding&quot;)
		)
	),
		 &quot;CompliancePreApprovalEditability&quot;,
IF(
   OR(
      $Profile.Name =&quot;TBOM Read Only&quot;,
      ISPICKVAL(LLC_BI__Stage__c, &quot;Credit Decisioning&quot;),
      ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;),
      ISPICKVAL(LLC_BI__Stage__c, &quot;Complete&quot;)
    ),
     &quot;CompliancePostApprovalEditability&quot;,
     &quot;Not met any Criteria&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Route Editability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Construction_Budget_Administration__c</fullName>
        <description>This field has been used in Credit memo PP.</description>
        <formula>ISBLANK(LLC_BI__Budget__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Budget Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Construction_Loan__c</fullName>
        <label>Construction Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase &amp; Fund Improvements</fullName>
                </value>
                <value>
                    <fullName>Ground-Up Construction</fullName>
                </value>
                <value>
                    <fullName>Improvements to Existing Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Coupon_Book_Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coupon Book Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Covenants_Due_Date__c</fullName>
        <formula>TODAY()+30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covenants Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Action_Narrative__c</fullName>
        <description>This field is used on the Credit Action route of Modified/Renewed Loans</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Action Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on Assign Team sub-route on Loan team</description>
        <label>Credit Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being used on Assign team member sub-route on Loan team.</description>
        <label>Credit Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Crop_Coverage_Ratio__c</fullName>
        <description>This field is used to calculate Crop Coverage Ratio.</description>
        <formula>LLC_BI__Loan_Collateral_Aggregate__r.CF_Crops_Livestock_Market_Value__c /  (CF_Total_Current_Balance__c +  CF_Total_Non_TBOM_Superior_Lien_Amount__c)</formula>
        <label>Crop &amp; Livestock Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Current_User_Assigned_As__c</fullName>
        <description>Used to populate the logged in user role</description>
        <formula>IF(  $User.Id =  LLC_BI__Loan_Officer__c ,&apos;Relationship Manager&apos;,
IF( $User.Id =    cm_Loan_Assistant__c ,&apos;Loan Assistant&apos;,
IF( $User.Id =    CF_Credit_Analyst__c ,&apos;Credit Analyst&apos;,
IF( $User.Id =    CF_Credit_Officer__c ,&apos;Credit Officer&apos;,
IF( $User.Id =    CF_Treasury__c ,&apos;Treasury&apos;,
IF( $User.Id =  LLC_BI__Processor_Name__c  ,&apos;Processor&apos;,
IF( $User.Id =   CF_Appraiser_Reviewer__c   ,&apos;Appraiser Reviewer&apos;,
IF( $User.Id =  Secondary_Relationship_Manager__c, &apos;Secondary Relationship Manager&apos;,
&apos;NA&apos;))))))))</formula>
        <label>Current User Assigned As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Customer_Accepts_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Accepts Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Doc_Prep_Status__c</fullName>
        <description>Doc Prep Status on the Post Approval route Doc Prep subroute.</description>
        <label>Doc Prep Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Processor Reviewing Documents</fullName>
                </value>
                <value>
                    <fullName>Printing Documents</fullName>
                </value>
                <value>
                    <fullName>Lender Review</fullName>
                </value>
                <value>
                    <fullName>Hold - Waiting on Additional Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Escrow__c</fullName>
        <label>Escrow</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>HOA Dues</fullName>
                </value>
                <value>
                    <fullName>Flood Insurance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Exposure_Calculation__c</fullName>
        <formula>IF(
(LLC_BI__Is_Modification__c || LLC_BI__isRenewal__c) &amp;&amp; NOT(ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;)), LLC_BI__Net_New_Funds__c,
IF(
ISPICKVAL(LLC_BI__Stage__c, &quot;Booked&quot;), (LLC_BI__Principal_Balance__c - CF_Participation_Amount__c) + (LLC_BI__Availability_From_Core__c - CF_Available_Amount__c), LLC_BI__Amount__c - LLC_BI__Allocated_Facility_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Experimental field, do NOT use</inlineHelpText>
        <label>Exposure Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Fast_Track_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flood Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Flood_Verification_Applicable__c</fullName>
        <inlineHelpText>If the property is in a flood zone, then answer yes.   Otherwise no.</inlineHelpText>
        <label>Flood Verification Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Flood_Verification_Status__c</fullName>
        <label>LS Flood Insurance Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified - Flood Insurance Already Placed</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Verified - Flood Not Required</fullName>
                </value>
                <value>
                    <fullName>Verified - Flood Required</fullName>
                </value>
                <value>
                    <fullName>Verification/Review in Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Full_Product_Name__c</fullName>
        <description>This field has been created as part of short form credit memo.</description>
        <formula>text(LLC_BI__Product__c) &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Line__c) &amp; &quot; - &quot; &amp; text(LLC_BI__Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Funding_Date__c</fullName>
        <description>This Filed is used on the Booking &amp; Funding sub route on the Post approval route on Loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_GL_Cost_Code__c</fullName>
        <label>GL Cost Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>DEFAULT</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>SBA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_HMDA_Not_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be manually selected, or can be set to be automatically set via the questionnaire. When selected, it indicates that this the loan falls under a category that makes it Not HMDA reportable. When unselected the loan is HMDA reportable. By default, this field is unselected</description>
        <label>HMDA Not Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_HMDA_Questionnaire_Edit_Override__c</fullName>
        <description>Used to assign the value of True if the user has the permission set assigned, otherwise it assigns False. This is used to allow the Compliance route/HMDA fields to be editable to anyone who has the permission set.</description>
        <formula>IF($Permission.HMDA_Questionnaire_Edit_Override, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HMDA_Questionnaire_Edit_Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Hard_Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hard Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Info from Customer</fullName>
                </value>
                <value>
                    <fullName>Incorrect documents</fullName>
                </value>
                <value>
                    <fullName>Missing documents</fullName>
                </value>
                <value>
                    <fullName>Missing signatures</fullName>
                </value>
                <value>
                    <fullName>Missing Information from RM</fullName>
                    <isActive>false</isActive>
                    <label>Missing Information from RM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Include_Escrow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify if a will use Escrow.</description>
        <label>Include Escrow?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Document_Awaiting_Review__c</fullName>
        <description>This field has been used in &quot;Customer Documents Awaiting Review&quot; list view on Loan.</description>
        <label>Loan Document Awaiting Review</label>
        <summaryFilterItems>
            <field>LLC_BI__LLC_LoanDocument__c.LLC_BI__reviewStatus__c</field>
            <operation>equals</operation>
            <value>Awaiting Review</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__LLC_LoanDocument__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Document_Exception_Status__c</fullName>
        <description>This field has been used in &quot;Loans with Rejected Customer Documents&quot; list view.</description>
        <label>Loan Document Exception Status</label>
        <summaryFilterItems>
            <field>LLC_BI__LLC_LoanDocument__c.LLC_BI__reviewStatus__c</field>
            <operation>equals</operation>
            <value>Exception</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__LLC_LoanDocument__c.LLC_BI__Loan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Fully_Cash_Secured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Fully Cash Secured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Maturity_Date_In__c</fullName>
        <formula>IF(AND(LLC_BI__Maturity_Date__c-TODAY()&gt;=0,LLC_BI__Maturity_Date__c-TODAY()&lt;=30),&quot;30 Days&quot;,
IF(AND(LLC_BI__Maturity_Date__c-TODAY()&gt;=31,LLC_BI__Maturity_Date__c-TODAY()&lt;=60),&quot;31-60 Days&quot;,
IF(AND(LLC_BI__Maturity_Date__c-TODAY()&gt;=61,LLC_BI__Maturity_Date__c-TODAY()&lt;=90),&quot;61-90 Days&quot;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Maturity Date In</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Narrative__c</fullName>
        <description>This field is used on Loan narrative section on Credit Memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Origination_Fee__c</fullName>
        <label>Loan Origination Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Loan_Portal_Loan_Stage__c</fullName>
        <description>This formula field is used for field mapping in the email template.</description>
        <formula>CASE(LLC_BI__Stage__c, 
&quot;Qualification / Proposal&quot;, &apos;Processing&apos;, 
&quot;Application Processing&quot;, &apos;Processing&apos;, 
&quot;Credit Underwriting&quot;, &apos;Underwriting&apos;, 
&quot;Credit Decisioning&quot;, &apos;Underwriting&apos;,
&quot;Pre-Closing Due Diligence&quot;, &apos;Pre-Closing&apos;, 
&quot;Doc Prep &amp; Review&quot;, &apos;Pre-Closing&apos;, 
&quot;Closing&quot;, &apos;Pre-Closing&apos;, 
&quot;Booking / Funding&quot;, &apos;Closed&apos;, 
&quot;Booked&quot;, &apos;Closed&apos;, 
&quot;Complete&quot;, &apos;Complete&apos;, 
&apos;Complete&apos;)</formula>
        <label>Portal Loan Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>